modified autoload: files: section

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
     "autoload": {
         "psr-4": {
             "Hexlet\\Code\\": "src/"
-        }
+        },
+        "files": [
+            "src/Cli.php"
+        ]
     },
     "authors": [
         {
@@ -14,7 +17,9 @@
             "email": "janiqgames@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "wp-cli/php-cli-tools": "^0.11.22"
+    },
     "bin": [
     	"bin/brain-games"
     ]
