updated files: and bin: sections

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
             "Hexlet\\Code\\": "src/"
         },
         "files": [
-            "src/Cli.php"
+            "src/Cli.php",
+            "src/brain-even-logic.php"
         ]
     },
     "authors": [
@@ -21,7 +22,8 @@
         "wp-cli/php-cli-tools": "^0.11.22"
     },
     "bin": [
-    	"bin/brain-games"
+    	"bin/brain-games",
+        "bin/brain-even"
     ],
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.8"
