--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,11 @@
     },
     "bin": [
     	"bin/brain-games",
-        "bin/BrainEven",
-        "bin/BrainCalc",
-        "bin/BrainGcd",
-        "bin/BrainPrime",
-        "bin/BrainProgression"
+        "bin/brain-even",
+        "bin/brain-calc",
+        "bin/brain-gcd",
+        "bin/brain-prime",
+        "bin/brain-progression"
     ],
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.8"
